lib/crates/core/tests/snapshots/scene_snapshots__simple_bar.snap
---
source: crates/core/tests/scene_snapshots.rs
expression: json
---
{
  "background": {
    "a": 255,
    "b": 255,
    "g": 255,
    "r": 255
  },
  "height": 245,
  "items": [
    {
      "kind": "line",
      "points": [
        [
          44,
          210
        ],
        [
          344,
          210
        ]
      ],
      "stroke": {
        "color": {
          "a": 255,
          "b": 221,
          "g": 221,
          "r": 221
        },
        "width": 1
      }
    },
    {
      "kind": "line",
      "points": [
        [
          44,
          170
        ],
        [
          344,
          170
        ]
      ],
      "stroke": {
        "color": {
          "a": 255,
          "b": 221,
          "g": 221,
          "r": 221
        },
        "width": 1
      }
    },
    {
      "kind": "line",
      "points": [
        [
          44,
          130
        ],
        [
          344,
          130
        ]
      ],
      "stroke": {
        "color": {
          "a": 255,
          "b": 221,
          "g": 221,
          "r": 221
        },
        "width": 1
      }
    },
    {
      "kind": "line",
      "points": [
        [
          44,
          90
        ],
        [
          344,
          90
        ]
      ],
      "stroke": {
        "color": {
          "a": 255,
          "b": 221,
          "g": 221,
          "r": 221
        },
        "width": 1
      }
    },
    {
      "kind": "line",
      "points": [
        [
          44,
          50
        ],
        [
          344,
          50
        ]
      ],
      "stroke": {
        "color": {
          "a": 255,
          "b": 221,
          "g": 221,
          "r": 221
        },
        "width": 1
      }
    },
    {
      "kind": "line",
      "points": [
        [
          44,
          10
        ],
        [
          344,
          10
        ]
      ],
      "stroke": {
        "color": {
          "a": 255,
          "b": 221,
          "g": 221,
          "r": 221
        },
        "width": 1
      }
    },
    {
      "kind": "line",
      "points": [
        [
          44,
          10
        ],
        [
          44,
          210
        ]
      ],
      "stroke": {
        "color": {
          "a": 255,
          "b": 136,
          "g": 136,
          "r": 136
        },
        "width": 1
      }
    },
    {
      "kind": "line",
      "points": [
        [
          39,
          210
        ],
        [
          44,
          210
        ]
      ],
      "stroke": {
        "color": {
          "a": 255,
          "b": 136,
          "g": 136,
          "r": 136
        },
        "width": 1
      }
    },
    {
      "kind": "line",
      "points": [
        [
          39,
          170
        ],
        [
          44,
          170
        ]
      ],
      "stroke": {
        "color": {
          "a": 255,
          "b": 136,
          "g": 136,
          "r": 136
        },
        "width": 1
      }
    },
    {
      "kind": "line",
      "points": [
        [
          39,
          130
        ],
        [
          44,
          130
        ]
      ],
      "stroke": {
        "color": {
          "a": 255,
          "b": 136,
          "g": 136,
          "r": 136
        },
        "width": 1
      }
    },
    {
      "kind": "line",
      "points": [
        [
          39,
          90
        ],
        [
          44,
          90
        ]
      ],
      "stroke": {
        "color": {
          "a": 255,
          "b": 136,
          "g": 136,
          "r": 136
        },
        "width": 1
      }
    },
    {
      "kind": "line",
      "points": [
        [
          39,
          50
        ],
        [
          44,
          50
        ]
      ],
      "stroke": {
        "color": {
          "a": 255,
          "b": 136,
          "g": 136,
          "r": 136
        },
        "width": 1
      }
    },
    {
      "kind": "line",
      "points": [
        [
          39,
          10
        ],
        [
          44,
          10
        ]
      ],
      "stroke": {
        "color": {
          "a": 255,
          "b": 136,
          "g": 136,
          "r": 136
        },
        "width": 1
      }
    },
    {
      "anchor": "end",
      "angle": 0,
      "baseline": "middle",
      "content": "0",
      "fill": {
        "a": 255,
        "b": 0,
        "g": 0,
        "r": 0
      },
      "kind": "text",
      "size": 10,
      "x": 37,
      "y": 210
    },
    {
      "anchor": "end",
      "angle": 0,
      "baseline": "middle",
      "content": "20",
      "fill": {
        "a": 255,
        "b": 0,
        "g": 0,
        "r": 0
      },
      "kind": "text",
      "size": 10,
      "x": 37,
      "y": 170
    },
    {
      "anchor": "end",
      "angle": 0,
      "baseline": "middle",
      "content": "40",
      "fill": {
        "a": 255,
        "b": 0,
        "g": 0,
        "r": 0
      },
      "kind": "text",
      "size": 10,
      "x": 37,
      "y": 130
    },
    {
      "anchor": "end",
      "angle": 0,
      "baseline": "middle",
      "content": "60",
      "fill": {
        "a": 255,
        "b": 0,
        "g": 0,
        "r": 0
      },
      "kind": "text",
      "size": 10,
      "x": 37,
      "y": 90
    },
    {
      "anchor": "end",
      "angle": 0,
      "baseline": "middle",
      "content": "80",
      "fill": {
        "a": 255,
        "b": 0,
        "g": 0,
        "r": 0
      },
      "kind": "text",
      "size": 10,
      "x": 37,
      "y": 50
    },
    {
      "anchor": "end",
      "angle": 0,
      "baseline": "middle",
      "content": "100",
      "fill": {
        "a": 255,
        "b": 0,
        "g": 0,
        "r": 0
      },
      "kind": "text",
      "size": 10,
      "x": 37,
      "y": 10
    },
    {
      "anchor": "middle",
      "angle": -90,
      "baseline": "alphabetic",
      "content": "amount",
      "fill": {
        "a": 255,
        "b": 0,
        "g": 0,
        "r": 0
      },
      "kind": "text",
      "size": 11,
      "x": 16.315,
      "y": 110
    },
    {
      "kind": "line",
      "points": [
        [
          44,
          210
        ],
        [
          344,
          210
        ]
      ],
      "stroke": {
        "color": {
          "a": 255,
          "b": 136,
          "g": 136,
          "r": 136
        },
        "width": 1
      }
    },
    {
      "kind": "line",
      "points": [
        [
          69,
          210
        ],
        [
          69,
          215
        ]
      ],
      "stroke": {
        "color": {
          "a": 255,
          "b": 136,
          "g": 136,
          "r": 136
        },
        "width": 1
      }
    },
    {
      "kind": "line",
      "points": [
        [
          119,
          210
        ],
        [
          119,
          215
        ]
      ],
      "stroke": {
        "color": {
          "a": 255,
          "b": 136,
          "g": 136,
          "r": 136
        },
        "width": 1
      }
    },
    {
      "kind": "line",
      "points": [
        [
          169,
          210
        ],
        [
          169,
          215
        ]
      ],
      "stroke": {
        "color": {
          "a": 255,
          "b": 136,
          "g": 136,
          "r": 136
        },
        "width": 1
      }
    },
    {
      "kind": "line",
      "points": [
        [
          219,
          210
        ],
        [
          219,
          215
        ]
      ],
      "stroke": {
        "color": {
          "a": 255,
          "b": 136,
          "g": 136,
          "r": 136
        },
        "width": 1
      }
    },
    {
      "kind": "line",
      "points": [
        [
          269,
          210
        ],
        [
          269,
          215
        ]
      ],
      "stroke": {
        "color": {
          "a": 255,
          "b": 136,
          "g": 136,
          "r": 136
        },
        "width": 1
      }
    },
    {
      "kind": "line",
      "points": [
        [
          319,
          210
        ],
        [
          319,
          215
        ]
      ],
      "stroke": {
        "color": {
          "a": 255,
          "b": 136,
          "g": 136,
          "r": 136
        },
        "width": 1
      }
    },
    {
      "anchor": "end",
      "angle": 270,
      "baseline": "middle",
      "content": "A",
      "fill": {
        "a": 255,
        "b": 0,
        "g": 0,
        "r": 0
      },
      "kind": "text",
      "size": 10,
      "x": 69,
      "y": 217
    },
    {
      "anchor": "end",
      "angle": 270,
      "baseline": "middle",
      "content": "B",
      "fill": {
        "a": 255,
        "b": 0,
        "g": 0,
        "r": 0
      },
      "kind": "text",
      "size": 10,
      "x": 119,
      "y": 217
    },
    {
      "anchor": "end",
      "angle": 270,
      "baseline": "middle",
      "content": "C",
      "fill": {
        "a": 255,
        "b": 0,
        "g": 0,
        "r": 0
      },
      "kind": "text",
      "size": 10,
      "x": 169,
      "y": 217
    },
    {
      "anchor": "end",
      "angle": 270,
      "baseline": "middle",
      "content": "D",
      "fill": {
        "a": 255,
        "b": 0,
        "g": 0,
        "r": 0
      },
      "kind": "text",
      "size": 10,
      "x": 219,
      "y": 217
    },
    {
      "anchor": "end",
      "angle": 270,
      "baseline": "middle",
      "content": "E",
      "fill": {
        "a": 255,
        "b": 0,
        "g": 0,
        "r": 0
      },
      "kind": "text",
      "size": 10,
      "x": 269,
      "y": 217
    },
    {
      "anchor": "end",
      "angle": 270,
      "baseline": "middle",
      "content": "F",
      "fill": {
        "a": 255,
        "b": 0,
        "g": 0,
        "r": 0
      },
      "kind": "text",
      "size": 10,
      "x": 319,
      "y": 217
    },
    {
      "anchor": "middle",
      "angle": 0,
      "baseline": "top",
      "content": "category",
      "fill": {
        "a": 255,
        "b": 0,
        "g": 0,
        "r": 0
      },
      "kind": "text",
      "size": 11,
      "x": 194,
      "y": 228.222
    },
    {
      "fill": {
        "a": 255,
        "b": 168,
        "g": 120,
        "r": 76
      },
      "h": 56,
      "kind": "rect",
      "stroke": null,
      "w": 45,
      "x": 46.5,
      "y": 154
    },
    {
      "fill": {
        "a": 255,
        "b": 168,
        "g": 120,
        "r": 76
      },
      "h": 110,
      "kind": "rect",
      "stroke": null,
      "w": 45,
      "x": 96.5,
      "y": 100
    },
    {
      "fill": {
        "a": 255,
        "b": 168,
        "g": 120,
        "r": 76
      },
      "h": 86,
      "kind": "rect",
      "stroke": null,
      "w": 45,
      "x": 146.5,
      "y": 124
    },
    {
      "fill": {
        "a": 255,
        "b": 168,
        "g": 120,
        "r": 76
      },
      "h": 182,
      "kind": "rect",
      "stroke": null,
      "w": 45,
      "x": 196.5,
      "y": 28
    },
    {
      "fill": {
        "a": 255,
        "b": 168,
        "g": 120,
        "r": 76
      },
      "h": 162,
      "kind": "rect",
      "stroke": null,
      "w": 45,
      "x": 246.5,
      "y": 48
    },
    {
      "fill": {
        "a": 255,
        "b": 168,
        "g": 120,
        "r": 76
      },
      "h": 106,
      "kind": "rect",
      "stroke": null,
      "w": 45,
      "x": 296.5,
      "y": 104
    }
  ],
  "plot": {
    "h": 200,
    "w": 300,
    "x": 44,
    "y": 10
  },
  "width": 349
}
